// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when it is a set of checkboxes 1`] = `
<div>
  <fieldset
    class="usa-fieldset"
  >
    <h2>
      title
    </h2>
    <div
      class="usa-checkbox"
    >
      <input
        class="usa-checkbox__input usa-checkbox__input--tile"
        id="name-a-a"
        name="name-a"
        type="checkbox"
        value="a"
      />
      <label
        class="usa-checkbox__label"
        for="name-a-a"
      >
        label a
      </label>
    </div>
    <div
      class="usa-checkbox"
    >
      <input
        class="usa-checkbox__input usa-checkbox__input--tile"
        id="name-b-b"
        name="name-b"
        type="checkbox"
        value="b"
      />
      <label
        class="usa-checkbox__label"
        for="name-b-b"
      >
        label b
      </label>
    </div>
    <div
      class="usa-checkbox"
    >
      <input
        class="usa-checkbox__input usa-checkbox__input--tile"
        id="name-c-c"
        name="name-c"
        type="checkbox"
        value="c"
      />
      <label
        class="usa-checkbox__label"
        for="name-c-c"
      >
        label c
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`should match snapshot when it is a set of radio buttons 1`] = `
<div>
  <fieldset
    class="usa-fieldset"
  >
    <h2>
      title
    </h2>
    <div
      class="usa-radio"
    >
      <input
        class="usa-radio__input usa-radio__input--tile"
        id="name-a-a"
        name="name-a"
        type="radio"
        value="a"
      />
      <label
        class="usa-radio__label"
        for="name-a-a"
      >
        label a
      </label>
    </div>
    <div
      class="usa-radio"
    >
      <input
        class="usa-radio__input usa-radio__input--tile"
        id="name-b-b"
        name="name-b"
        type="radio"
        value="b"
      />
      <label
        class="usa-radio__label"
        for="name-b-b"
      >
        label b
      </label>
    </div>
    <div
      class="usa-radio"
    >
      <input
        class="usa-radio__input usa-radio__input--tile"
        id="name-c-c"
        name="name-c"
        type="radio"
        value="c"
      />
      <label
        class="usa-radio__label"
        for="name-c-c"
      >
        label c
      </label>
    </div>
  </fieldset>
</div>
`;
